# gramine

CI-Examples/agent_app_rune/: Makefile  agent_app  agent_app.c  agent_app.manifest.template  app_app  app_app.c  app_app.manifest.template  build.sh  buildscript  clean_files.sh  comm_lib.c  comm_lib.h  helloworld  helloworld.c  key  rune_app  rune_app.c
CI-Examples/enclave_cc_gramine/: buildscript  enclave-agent.manifest.template  kill.sh
CI-Examples/enclave_cc_gramine/enclave-cc/: ying
CI-Examples/enclave_cc_gramine/image-rs/: Cargo.toml  branch.diff  ying.patch
CI-Examples/enclave_cc_gramine/server/: Cargo.toml  async-client.rs  async-server.rs  build.rs  enclave-agent.rs  hello_world  log  server.rs  test.rs  utils.rs
CI-Examples/enclave_cc_gramine/server/protocols/asynchronous/: agent_ttrpc.rs  health.rs  oci.rs
CI-Examples/enclave_cc_gramine/server/protocols/sync/: agent.rs  agent_ttrpc.rs  health.rs  health_ttrpc.rs  image_ttrpc.rs  mod.rs  oci.rs  types.rs
CI-Examples/enclave_cc_seal_key/: runscript
CI-Examples/enclave_cc_sig/: Makefile  async-client.manifest.template  buildscript  enclave-agent.manifest.template
CI-Examples/pal_api/: Makefile  build.sh  buildscript  client  client.c  comm_data.h  comm_lib.c  helloworld  helloworld.c  helloworld.manifest.template  kill.sh  payload_receiver  payload_receiver.c  server.c  server.manifest.template
CI-Examples/utimensat/: 1  Makefile  test.bak  test_utimensat  test_utimensat.c  test_utimensat.manifest.template  test_utimensat_work.c
Documentation/: manifest-syntax.rst
Documentation/devel/: howto-doc.rst
LibOS/shim/include/: shim_fs.h  (+1 more)
Pal/gdb_integration/: debug_map_gdb.py
common/include/: api.h  linux_socket.h  spinlock.h  toml_utils.h
common/src/: printf.c
libos/include/: libos_fs.h  libos_table.h
pal/include/: pal_internal.h
pal/src/: pal_misc.c
python/graminelibos/: sgx_get_token.py
(+84 files in other folders)
