[package]
name = "ttrpc-example"
version = "0.2.0"
authors = ["The AntFin Kata Team <kata@list.alibaba-inc.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["ttrpc", "protobuf", "rpc"]
readme = "README.md"
repository = "https://github.com/alipay/ttrpc-rust"
homepage = "https://github.com/alipay/ttrpc-rust"
description = "An example of ttrpc."

[dependencies]
#protobuf = "2.8.0"
#protobuf = "2.14.0"
protobuf = { version = "=2.14.0", features = ["with-serde"] }
bytes = "0.4.11"
#libc = "0.2.79"
libc = "0.2.58"
byteorder = "1.3.2"
#log = "0.4.6"
log = "0.4.11"
simple-logging = "2.0.2"
nix = "0.23.0"
#ttrpc = { version = "0.5.0", features = ["async"] }
#ttrpc = { path = "/root/yanrong/ttrpc-rust", features = ["async"] }
ttrpc = { git = "https://github.com/haosanzi/ttrpc-rust", features = ["async"] }

ctrlc = { version = "3.0", features = ["termination"] }
# Async runtime
tokio = { version = "1.14.0", features = ["full"] }
#tokio = { version = "1.0.1", features = ["sinal", "time"] }
#tokio = { version = "1", features = ["full"] }
async-trait = "0.1.42"
#image-rs = { git = "https://github.com/zhiwei-intel-h/image-rs", branch = "dev-occlum-adaption" }
#image-rs = { git = "https://github.com/confidential-containers/image-rs" }
#anyhow = ">=1.0"
anyhow = "1.0.32"
clap = "2.33.3"
#clap = { version = "3.0.1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }


[[example]]
name = "client"
path = "./client.rs"

[[example]]
name = "server"
path = "./server.rs"

[[example]]
name = "async-server"
path = "./async-server.rs"

[[example]]
name = "enclave-agent"
path = "./enclave-agent.rs"

[[example]]
name = "async-client"
path = "./async-client.rs"

[build-dependencies]
ttrpc-codegen = "0.2.0"
